@@ -1,5 +1,7 @@
 = master
 
+* Add middleware_stack plugin for removing middleware and inserting middleware before the end of the stack (jeremyevans)
+
 * Make head plugin handle closing existing response bodies if the body responds to close (Eric Wong)
 
 = 3.3.0 (2017-12-14)
